--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.4.1",
-    "mysql": "^2.18.1"
-  }
+    "fs": "0.0.1-security",
+    "mongoose": "^5.9.18"
+  },
+  "devDependencies": {}
 }
