--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Nelson Alves",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "cors": "^2.8.5",
@@ -18,7 +19,9 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.4.1",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
+    "node-gyp": "^7.1.2",
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
