--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.4.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "node-gyp": "^7.1.2",
     "sequelize": "^6.3.4"
