--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "node-gyp": "^7.1.2",
+    "nodemailer": "^6.5.0",
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
