--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Nelson Alves",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
@@ -20,9 +21,11 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.4.1",
     "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.1",
     "node-gyp": "^7.1.2",
     "nodemailer": "^6.5.0",
     "sequelize": "^6.3.4"
