--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^2.6.1",
     "node-gyp": "^7.1.2",
     "nodemailer": "^6.5.0",
+    "path": "^0.12.7",
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
